# controller/struct.go
@@ -40,7 +40,14 @@ type ReqMahasiswa struct {
 
 type ReqPresensi struct {
 	Npm     int       `bson:"npm,omitempty" json:"npm,omitempty" example:"714220050"`
-	Matkul  Matkul    `bson:"matkul,omitempty" json:"matkul,omitempty"`
+	Matkul  ReqMatkul    `bson:"matkul,omitempty" json:"matkul,omitempty"`
 	Biodata ReqMahasiswa `bson:"biodata,omitempty" json:"biodata,omitempty"`
 	Checkin string    `bson:"checkin,omitempty" json:"checkin,omitempty" example:"Hadir"`
+}
+
+type ReqMatkul struct {
+	Nama_matkul   string   `bson:"namamatkul,omitempty" json:"namamatkul,omitempty" example: "Kewirausahaan"`
+	Jadwal        string   `bson:"jadwal,omitempty" json:"jadwal,omitempty" example: "Senin, Selasa, Rabu, Kamis, Jumat, Sabtu, Minggu"`
+	Sks      	  int      `bson:"sks,omitempty" json:"sks,omitempty" example: "2"`
+	Dosen         string   `bson:"dosen,omitempty" json:"dosen,omitempty" example: "Roni Habibie"`
 }
