# docs/swagger.json
@@ -219,6 +219,23 @@
                 }
             }
         },
+        "controller.ReqMatkul": {
+            "type": "object",
+            "properties": {
+                "dosen": {
+                    "type": "string"
+                },
+                "jadwal": {
+                    "type": "string"
+                },
+                "namamatkul": {
+                    "type": "string"
+                },
+                "sks": {
+                    "type": "integer"
+                }
+            }
+        },
         "controller.ReqPresensi": {
             "type": "object",
             "properties": {
@@ -230,7 +247,7 @@
                     "example": "Hadir"
                 },
                 "matkul": {
-                    "$ref": "#/definitions/controller.Matkul"
+                    "$ref": "#/definitions/controller.ReqMatkul"
                 },
                 "npm": {
                     "type": "integer",
